<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_mono"
        android:title="@string/search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_favorite_recipes"
        android:title="@string/nav_favorites_title"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about_recipe_puppy"
        android:title="@string/about_recipe_puppy"
        app:showAsAction="never"/>

</menu>