<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    android:background="@drawable/bg_rounded"
    android:elevation="@dimen/margin_small"
    android:paddingBottom="8dp">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/img_recipe"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/margin_medium"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:civ_border_color="#454545"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_tile"
        tools:src="@sample/sample.json/results/href" />

    <TextView
        android:id="@+id/tvRecipeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:textColor="#010101"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_recipe"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@sample/sample.json/results/title" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/ingredients_chips_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:maxHeight="100dp"
        android:saveEnabled="false"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_recipe"
        app:layout_constraintTop_toBottomOf="@+id/tvRecipeName">

        <!--This is only for design time and will be removed at run time-->
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@sample/sample.json/results/ingredients" />

    </com.google.android.material.chip.ChipGroup>

    <ImageView
        android:id="@+id/img_star"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/txt_star"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_star_white_mono" />

</androidx.constraintlayout.widget.ConstraintLayout>